summative.moria.Moria.scala.error
Compilation error:
Moria:38: error: not found: value isFinalePosition
while(!isFinalePosition()){
       ^